.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:46:30 **** Build of configuration Debug for project Ej 2-2 ****
make all 
Building file: ../src/Ej 2-2.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Ej 2-2.d" -MT"src/Ej 2-2.o" -o "src/Ej 2-2.o" "../src/Ej 2-2.c"
Finished building: ../src/Ej 2-2.c
 
Building target: Ej 2-2
Invoking: MacOS X C Linker
gcc  -o "Ej 2-2"  ./src/Ej\ 2-2.o   
Finished building target: Ej 2-2
 

23:46:31 Build Finished. 0 errors, 0 warnings. (took 936ms)

23:46:31 **** Build of configuration Release for project Ej 2-2 ****
make all 
Building file: ../src/Ej 2-2.c
Invoking: GCC C Compiler
gcc -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Ej 2-2.d" -MT"src/Ej 2-2.o" -o "src/Ej 2-2.o" "../src/Ej 2-2.c"
Finished building: ../src/Ej 2-2.c
 
Building target: Ej 2-2
Invoking: MacOS X C Linker
gcc  -o "Ej 2-2"  ./src/Ej\ 2-2.o   
Finished building target: Ej 2-2
 
23:59:01 **** Incremental Build of configuration Debug for project Ej 2-1 ****
make all 
make: Nothing to be done for `all'.
23:59:13 **** Clean-only build of configuration Debug for project Ej 2-2 ****
make clean 
rm -rf ./src/Ej\ 2-2.d ./src/Ej\ 2-2.o
rm -rf Ej\\ 2-2
 
23:59:13 **** Incremental Build of configuration Debug for project Ej 2-2 ****
make all 
Building file: ../src/Ej 2-2.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Ej 2-2.d" -MT"src/Ej 2-2.o" -o "src/Ej 2-2.o" "../src/Ej 2-2.c"
../src/Ej 2-2.c:19:6: warning: variable 'sumaPositivos' set but not used [-Wunused-but-set-variable]
        int sumaPositivos = 0;
            ^
1 warning generated.
Finished building: ../src/Ej 2-2.c
 
Building target: Ej 2-2
Invoking: MacOS X C Linker
gcc  -o "Ej 2-2"  ./src/Ej\ 2-2.o   
Finished building target: Ej 2-2
 
00:03:38 **** Incremental Build of configuration Debug for project Ej 2-2 ****
make all 
Building file: ../src/Ej 2-2.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Ej 2-2.d" -MT"src/Ej 2-2.o" -o "src/Ej 2-2.o" "../src/Ej 2-2.c"
../src/Ej 2-2.c:53:2: error: implicit declaration of function 'printfln' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        printfln("Hay %d numeros pares y %d numeros impares", contadorPares, contadorImpares);
        ^
../src/Ej 2-2.c:53:2: note: did you mean 'printf'?
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/stdio.h:170:6: note: 'printf' declared here
int      printf(const char * __restrict, ...) __printflike(1, 2);
         ^
1 error generated.
make: *** [src/Ej 2-2.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
00:04:21 **** Incremental Build of configuration Debug for project Ej 2-2 ****
make all 
Building file: ../src/Ej 2-2.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Ej 2-2.d" -MT"src/Ej 2-2.o" -o "src/Ej 2-2.o" "../src/Ej 2-2.c"
Finished building: ../src/Ej 2-2.c
 
Building target: Ej 2-2
Invoking: MacOS X C Linker
gcc  -o "Ej 2-2"  ./src/Ej\ 2-2.o   
Finished building target: Ej 2-2
 
00:05:58 **** Incremental Build of configuration Debug for project Ej 2-2 ****
make all 
Building file: ../src/Ej 2-2.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Ej 2-2.d" -MT"src/Ej 2-2.o" -o "src/Ej 2-2.o" "../src/Ej 2-2.c"
Finished building: ../src/Ej 2-2.c
 
Building target: Ej 2-2
Invoking: MacOS X C Linker
gcc  -o "Ej 2-2"  ./src/Ej\ 2-2.o   
Finished building target: Ej 2-2
 
00:11:26 **** Incremental Build of configuration Debug for project Ej 2-2 ****
make all 
Building file: ../src/Ej 2-2.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Ej 2-2.d" -MT"src/Ej 2-2.o" -o "src/Ej 2-2.o" "../src/Ej 2-2.c"
Finished building: ../src/Ej 2-2.c
 
Building target: Ej 2-2
Invoking: MacOS X C Linker
gcc  -o "Ej 2-2"  ./src/Ej\ 2-2.o   
Finished building target: Ej 2-2
 
00:12:02 **** Incremental Build of configuration Debug for project Ej 2-2 ****
make all 
make: Nothing to be done for `all'.
